# FileFlowsNotifier

./: pyproject.toml  setup.py
fileflows/: __init__.py  api.py  apps.py  logger.py  main.py
