[project]
version = 0.4

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "FileFlows"
description = "A library notifying when FileFlows is done"
authors = ["Josh Loecker <joshloecker@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
